# cffi-mem-alloc-example

./: CMakeLists.txt  README.md  requirements.txt  test.py
example/: __init__.py  example.cpp  example.h
